# dps-assignment

./: .dockerignore  .env.example  00_START_HERE.md  ADVANCED.md  Dockerfile  INDEX.md  PROJECT_SUMMARY.py  QUICKSTART.md  README.md  cli.py  config.py  config.yaml  database.py  docker-compose.yml  examples.py  llm_provider.py  main.py  models.py  pyproject.toml  query_agent.py  query_executor.py  requirements.txt  run.sh  school_info.txt  school_principle.txt  seed_database.py  setup.py  start_litellm.sh  test_agent.py  tools.py  tools_schema.py
